Wrong memory state is picked in SuperWord::co_locate_pack()

XMLWordPrintable

    • b03
    • 20
    • b17
    • x86_64
    • linux

      The following test failed in the JDK20 CI:

      applications/javafuzzer/BigTest.java

      Here's a snippet from the log file:

      ----------System.out:(36/2680)----------
      Using JRuby executable: /opt/mach5/mesos/work_dir/jib-master/install/org/jruby/jruby-dist/9.2.12.0/jruby-dist-9.2.12.0-bin.zip/jruby-9.2.12.0/bin/jruby
      For random generator using seed: 2738850881927052418
      To re-run test with same seed value please add "-Djdk.test.lib.random.seed=2738850881927052418" to command line.
      Starting JavaFuzzer: '/bin/bash /opt/mach5/mesos/work_dir/jib-master/install/com/oracle/jpg/bigapps/javafuzzer/javafuzzer/1.0/javafuzzer-1.0.zip/mrt.sh -R /opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S45783/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/d852ccfd-f943-484a-a98a-a27ec0e23007/runs/e5bf1a13-986b-4657-8197-10a42c357763/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_javafuzzer_BigTest_java/scratch/0 -NT 300 -NP 12 -A -conf config.yml'
      [2022-07-22T22:09:57.905914816Z] Gathering output for process 7686
      [2022-07-23T07:20:56.583665013Z] Waiting for completion for process 7686
      [2022-07-23T07:20:56.583810329Z] Waiting for completion finished for process 7686
      Output and diagnostic info for process 7686 was saved into 'pid-7686-output.log'

      Summary of the JavaFuzzer run:
      ------------------------------
      Host: ol8-x64-641327
      Tests: 12 x 300
      Args: -conf config.yml

      Started at: Fri Jul 22 22:09:58 UTC 2022


      r6- 300: 177 passed, 0 crashes, 2 fails, 0 hangs, 0 incorrect tests, 122 Reference Java failures
      r8- 300: 189 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 111 Reference Java failures
      r3- 300: 179 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 121 Reference Java failures
      r5- 300: 187 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 113 Reference Java failures
      r12- 300: 178 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 122 Reference Java failures
      r4- 300: 177 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 123 Reference Java failures
      r11- 300: 177 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 123 Reference Java failures
      r1- 300: 178 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 122 Reference Java failures
      r7- 300: 180 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 120 Reference Java failures
      r9- 300: 182 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 118 Reference Java failures
      r2- 300: 184 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 116 Reference Java failures
      r10- 300: 173 passed, 0 crashes, 0 fails, 0 hangs, 0 incorrect tests, 127 Reference Java failures

      Finished at: Sat Jul 23 07:20:56 UTC 2022


      [2022-07-23T07:20:56.606831515Z] Waiting for completion for process 7686
      [2022-07-23T07:20:56.606973042Z] Waiting for completion finished for process 7686
      ----------System.err:(13/728)----------
      java.lang.RuntimeException: assertEquals: expected 1 to equal 2
      at jdk.test.lib.Asserts.fail(Asserts.java:594)
      at jdk.test.lib.Asserts.assertEquals(Asserts.java:205)
      at jdk.test.lib.Asserts.assertEquals(Asserts.java:189)
      at applications.javafuzzer.JavaFuzzerRunner.main(JavaFuzzerRunner.java:235)
      at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
      at java.base/java.lang.reflect.Method.invoke(Method.java:578)
      at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:312)
      at java.base/java.lang.Thread.run(Thread.java:1589)

      JavaTest Message: Test threw exception: java.lang.RuntimeException
      JavaTest Message: shutting down test

      result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: assertEquals: expected 1 to equal 2


      I downloaded the test run's artifacts and there are no hs_err_pid files.
      Taking a closer look at the above:

      r6- 300: 177 passed, 0 crashes, 2 fails, 0 hangs, 0 incorrect tests, 122 Reference Java failures

      so we have "2 fails", but they didn't result in crashes.

            Assignee:
            Fei Gao
            Reporter:
            Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: